pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_revocable.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  Revocable:
    offset: 0
    length: 1
    inner: false
