pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_revocation_key.snap
---
source: pgpvis-core/src/convert.rs
assertion_line: 1508
expression: value
---
offset: 0
length: 5
inner:
  length:
    offset: 0
    length: 1
    inner:
      One: 0
  type_id:
    offset: 1
    length: 1
    inner:
      critical: true
      type_id: ~
  data:
    offset: 2
    length: 3
    inner:
      RevocationKey:
        class:
          offset: 3
          length: 1
          inner: 192
        pub_key_algo_id:
          offset: 4
          length: 1
          inner: 27
        fingerprint:
          offset: 2
          length: 1
          inner:
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
            - 1
