pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_trust_signature.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 2
inner:
  TrustSignature:
    level:
      offset: 0
      length: 1
      inner: 255
    amount:
      offset: 1
      length: 1
      inner: 60
